arrumando leve erro de calculo
